--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ canvas {
   </style>
  </HEAD>
  <BODY>
-  <canvas id="pinkboard"></canvas>
+  <canvas id="green"></canvas>
   <script>
   /*
  * Settings
@@ -206,7 +206,7 @@ var ParticlePool = (function() {
     }
     context.closePath();
     // create the fill
-    context.fillStyle = '#ea80b0';
+    context.fillStyle = '#008000';
     context.fill();
     // create the image
     var image = new Image();
@@ -252,7 +252,7 @@ var ParticlePool = (function() {
     onResize();
     render();
   }, 10);
-})(document.getElementById('pinkboard'));
+})(document.getElementById('green'));
   </script>
  </BODY>
 </HTML>
